# openai-batch-utils

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
openai_batch_utils/: __init__.py  base.py  chat.py  embedding.py  utils.py
tests/: chat_test.py  embedding_test.py
