[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-batch-utils"
authors = [
  { name = "Jovan Veljanoski", email = "jovan.veljanoski@gmail.com" },
]

description = "Simple, helpful tools for batch async calls to OpenAI APIs."
readme = "README.md"
dependencies = [
  "openai>=1,<2",
  "tenacity>=8,<9"]

dynamic = ["version"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.2.2,<8",
       "pandas>=2,<3",
       "pytest-timeout",
       "pytest-asyncio",
       "flake8>=7,<8",
       "flake8-import-order<1",
       "black>=24,<25",]

[tool.setuptools]
packages = ["openai_batch_utils"]

[tool.setuptools.dynamic]
version = { attr = "openai_batch_utils.__version__" }


[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.git-crypt
    | \.cache
    | \.pytest_cache
    | \.idea
    | \.circleci
    | examples
)/
'''